--- a/add_service.html
+++ b/add_service.html
@@ -11,12 +11,12 @@
 
 <form action="create_service.php" method="post">
 
-	<p>Марка</p>
+	<p>Название</p>
 <input type="text" name="title" >
 	
-	<p>Модель</p>
+	<p>Адрес</p>
 <input type="text" name="address" >
 
-<input type="submit" value="Добавить холодильник))" >
+<input type="submit" value="Добавить сервис" >
 </form></body>
 </html>
